@@ -184,9 +184,9 @@ public class ClassVisitor {
     if (this.isInstrumented == null) {
       try {
         this.c.getDeclaredField("VUL_CLS_INS");
-        this.isInstrumented = new Boolean(true);
+        this.isInstrumented = Boolean.valueOf(true);
       } catch (NotFoundException e) {
-        this.isInstrumented = new Boolean(false);
+        this.isInstrumented = Boolean.valueOf(false);
       }
     }
     return this.isInstrumented.booleanValue();
@@ -436,7 +436,7 @@ public class ClassVisitor {
     // Add member to indicate that the class has been instrumented
     if (!this.isInstrumented()) {
       this.addBooleanMember("VUL_CLS_INS", true, true);
-      this.isInstrumented = new Boolean(true);
+      this.isInstrumented = Boolean.valueOf(true);
     }
 
     //		this.bytes = this.c.toBytecode();
@@ -516,7 +516,7 @@ public class ClassVisitor {
     // Avoid problems with JDO/JPA
     this.addFieldAnnotations(f, this.fieldAnnotations);
 
-    this.c.addField(f, new Boolean(_value).toString());
+    this.c.addField(f, Boolean.toString(_value));
   }
 
   /**
@@ -594,7 +594,7 @@ public class ClassVisitor {
    */
   private static Pattern QUALIFIED_TYPE_PATTERN = null;
 
-  private static Pattern getClassPattern() {
+  private static synchronized Pattern getClassPattern() {
     if (QUALIFIED_TYPE_PATTERN == null)
       QUALIFIED_TYPE_PATTERN = Pattern.compile("([0-9a-zA-Z_\\.\\$]*\\.)([a-zA-Z0-9_\\$]*)");
     return QUALIFIED_TYPE_PATTERN;
@@ -602,7 +602,7 @@ public class ClassVisitor {
 
   private static Pattern NESTED_CLASS_PATTERN = null;
 
-  private static Pattern getNestedClassPattern() {
+  private static synchronized Pattern getNestedClassPattern() {
     if (NESTED_CLASS_PATTERN == null)
       NESTED_CLASS_PATTERN = Pattern.compile("([0-9a-zA-Z_\\$]*\\$)([a-zA-Z0-9_]*)");
     return NESTED_CLASS_PATTERN;
@@ -698,7 +698,7 @@ public class ClassVisitor {
    *
    * @return a {@link com.sap.psr.vulas.shared.json.model.Application} object.
    */
-  public Application getAppContext() {
+  public synchronized Application getAppContext() {
     return this.appContext;
   }
 
@@ -716,7 +716,7 @@ public class ClassVisitor {
    *
    * @return a {@link java.lang.String} object.
    */
-  public String getOriginalArchiveDigest() {
+  public synchronized String getOriginalArchiveDigest() {
     return this.originalArchiveDigest;
   }
 
