@@ -78,7 +78,7 @@ public class InstrumentationControl {
 
   private Object instrumentationContext = null;
 
-  private LoaderFilter classloaderWhitelist = null;
+  // private LoaderFilter classloaderWhitelist = null;
   private StringList classloaderBlacklist = new StringList();
 
   // ------- Members related to blacklist checks for JARs and DIRs
@@ -134,11 +134,10 @@ public class InstrumentationControl {
     final Configuration cfg = VulasConfiguration.getGlobal().getConfiguration();
 
     // Only instrument classes loader by a certain class loader
-    if (cfg.getString("instr.whitelist.classloader", null) != null)
-      this.classloaderWhitelist =
-          new ClassNameLoaderFilter(
-              cfg.getString("instr.whitelist.classloader", null),
-              cfg.getBoolean("instr.whitelist.classloader.acceptChilds", true));
+    // if(cfg.getString("instr.whitelist.classloader", null)!=null)
+    //	this.classloaderWhitelist = new
+    // ClassNameLoaderFilter(cfg.getString("instr.whitelist.classloader", null),
+    // cfg.getBoolean("instr.whitelist.classloader.acceptChilds", true));
 
     // Blacklist from configuration (evaluated during transform)
     this.blacklistedClasses.addAll(cfg.getStringArray(CoreConfiguration.INSTR_BLACKLIST_CLASSES));
@@ -221,21 +220,21 @@ public class InstrumentationControl {
     // Case 1: Already instrumented
     if (_instr_successful == null) {
       final Integer count = this.alreadyInstrumentedCountPP.get(pid);
-      final Integer new_count = new Integer((count == null ? 1 : count.intValue() + 1));
+      final Integer new_count = Integer.valueOf(count == null ? 1 : count.intValue() + 1);
       this.alreadyInstrumentedCountPP.put(pid, new_count);
       this.alreadyInstrumentedCount++;
     }
     // Case 2: Successful instrumentation
     else if (_instr_successful.booleanValue()) {
       final Integer count = this.successfulInstrumentationCountPP.get(pid);
-      final Integer new_count = new Integer((count == null ? 1 : count.intValue() + 1));
+      final Integer new_count = Integer.valueOf(count == null ? 1 : count.intValue() + 1);
       this.successfulInstrumentationCountPP.put(pid, new_count);
       this.successfulInstrumentationCount++;
     }
     // Case 3: Unsuccessful instrumentation
     else {
       final Integer count = this.failedInstrumentationCountPP.get(pid);
-      final Integer new_count = new Integer((count == null ? 1 : count.intValue() + 1));
+      final Integer new_count = Integer.valueOf(count == null ? 1 : count.intValue() + 1);
       this.failedInstrumentationCountPP.put(pid, new_count);
       this.failedInstrumentationCount++;
       this.failedInstrumentations.add(_jcid);
@@ -273,12 +272,12 @@ public class InstrumentationControl {
               + " JARs] accepted for instrumentation, ["
               + this.blacklistedJarsCount
               + " JARs] ignored (blacklisted)");
-      if (InstrumentationControl.log.isInfoEnabled())
-        for (String path : this.checkedJars.keySet()) {
-          if (this.checkedJars.get(path))
-            InstrumentationControl.log.info("        [IGNOR] [" + path + "]");
-          else InstrumentationControl.log.info("        [ACCEP] [" + path + "]");
+      if (InstrumentationControl.log.isInfoEnabled()) {
+        for (Map.Entry<String, Boolean> e : this.checkedJars.entrySet()) {
+          if (e.getValue()) InstrumentationControl.log.info("        [IGNOR] [" + e.getKey() + "]");
+          else InstrumentationControl.log.info("        [ACCEP] [" + e.getKey() + "]");
         }
+      }
     }
 
     // Accepted and ignored (blacklisted) classes
@@ -294,12 +293,10 @@ public class InstrumentationControl {
               + StringUtil.padLeft(this.alreadyInstrumentedCountPP.keySet().size(), 3)
               + "] packages: Instrumentation existed");
       if (InstrumentationControl.log.isDebugEnabled())
-        for (JavaPackageId pid : this.alreadyInstrumentedCountPP.keySet())
+        for (Map.Entry<JavaPackageId, Integer> e : this.alreadyInstrumentedCountPP.entrySet()) {
           InstrumentationControl.log.debug(
-              "        |    "
-                  + this.alreadyInstrumentedCountPP.get(pid).intValue()
-                  + " in "
-                  + pid.toString());
+              "        |    " + e.getValue().intValue() + " in " + e.getKey().toString());
+        }
 
       // Log no. of instrumented classes, and those for which instrumentation failed (per package)
       InstrumentationControl.log.info(
@@ -319,12 +316,10 @@ public class InstrumentationControl {
               + StringUtil.padLeft(this.failedInstrumentationCountPP.keySet().size(), 3)
               + "] packages: Instrumentation failed");
       if (InstrumentationControl.log.isDebugEnabled())
-        for (JavaPackageId pid : this.failedInstrumentationCountPP.keySet())
+        for (Map.Entry<JavaPackageId, Integer> e : this.failedInstrumentationCountPP.entrySet()) {
           InstrumentationControl.log.debug(
-              "        |    "
-                  + this.failedInstrumentationCountPP.get(pid).intValue()
-                  + " in "
-                  + pid.toString());
+              "        |    " + e.getValue().intValue() + " in " + e.getKey().toString());
+        }
     }
   }
 
@@ -352,15 +347,16 @@ public class InstrumentationControl {
    */
   public Map<InstrumentationMetrics, Long> getStatistics() {
     final Map<InstrumentationMetrics, Long> stats = new HashMap<InstrumentationMetrics, Long>();
-    stats.put(InstrumentationMetrics.classesTotal, new Long(this.classesCount));
+    stats.put(InstrumentationMetrics.classesTotal, Long.valueOf(this.classesCount));
     stats.put(
-        InstrumentationMetrics.classesAlreadyInstrumented, new Long(this.alreadyInstrumentedCount));
+        InstrumentationMetrics.classesAlreadyInstrumented,
+        Long.valueOf(this.alreadyInstrumentedCount));
     stats.put(
         InstrumentationMetrics.classesInstrumentedSuccess,
-        new Long(this.successfulInstrumentationCount));
+        Long.valueOf(this.successfulInstrumentationCount));
     stats.put(
         InstrumentationMetrics.classesInstrumentedFailure,
-        new Long(this.failedInstrumentationCount));
+        Long.valueOf(this.failedInstrumentationCount));
     return stats;
   }
 
@@ -378,7 +374,7 @@ public class InstrumentationControl {
 
     // Check whether it has been loaded from a JAR: If not, return false (probably an app class),
     // otherwise check the blacklist
-    final String jar_path = FileUtil.getJARFilePath(_url.toString());
+    final String jar_path = FileUtil.getJarFilePath(_url.toString());
     if (jar_path == null) return false;
 
     // If a JAR URL can be determined, check if we already checked whether it is blacklisted
@@ -528,13 +524,13 @@ public class InstrumentationControl {
     final Map<String, Long> overall_stats = new HashMap<String, Long>();
     for (InstrumentationControl ctrl : instances.values()) {
       final Map<InstrumentationMetrics, Long> stats = ctrl.getStatistics();
-      for (InstrumentationMetrics m : stats.keySet()) {
-        final String key = m.toString();
+      for (Map.Entry<InstrumentationMetrics, Long> e : stats.entrySet()) {
+        final String key = e.getKey().toString();
         if (overall_stats.containsKey(key)) {
-          final long new_count = overall_stats.get(key).longValue() + stats.get(m).longValue();
-          overall_stats.put(key, new Long(new_count));
+          final long new_count = overall_stats.get(key).longValue() + e.getValue().longValue();
+          overall_stats.put(key, Long.valueOf(new_count));
         } else {
-          overall_stats.put(key, stats.get(m));
+          overall_stats.put(key, stats.get(e.getKey()));
         }
       }
     }
